Résolution bug couleurs
Espace de couleur de Y lors du chargement dans le CNN
Avant : [0 : 1[
Maintenant : [0 : 256[

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+.idea
 __pycache__
 saved_model_*
 dataset*
+test
 pixelart/*
 *.zip
 *.jpg
@@ -8,4 +10,3 @@ pixelart/*
 !*.sh
 !*.md
 !*.py
-!.idea/*
